--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <h1>THIS IS CREATED BY MUSIC 🎶 </h1>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inspiring Quotes</title>  
@@ -110,7 +109,7 @@
 
   <!-- Footer Section -->
   <footer>
-    <p>&copy; 2024 My Website</p>
+    <p>&copy;A Project Created By MUSIC(BISWAJIT)</p>
   </footer>
 
   <script>
